added supportive component Text

--- a/src/components/Main/List/Post/PostContent/PostContent.module.css
+++ b/src/components/Main/List/Post/PostContent/PostContent.module.css
@@ -68,9 +68,9 @@
 }
 
 @media (min-width: 580px) {
-  .linkPost {
+  /* .linkPost {
     font-size: 26px;
-  }
+  } */
 
   .linkPost:hover {
     color: #cc6633;
@@ -98,8 +98,8 @@
   }
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .linkPost {
     font-size: 32px;
   }
-}
+} */
