--- a/src/components/Modal/FormComment/FormComment.module.css
+++ b/src/components/Modal/FormComment/FormComment.module.css
@@ -6,8 +6,10 @@
 
 .textarea {
   width: 100%;
-  height: 100px;
+  min-height: 100px;
+  max-height: 200px;
   margin-bottom: 15px;
+  resize: vertical;
 }
 
 .btn {
